# RmEverTo2022

./: CMakeLists.txt  README.md  main.cpp  rebuild.sh  startOnly.sh
Headers/: anglesolve1.h  armordetect1.h  serial1.h
Sources/: anglesolve1.cpp  armordetect1.cpp  serial1.cpp
