CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(findarmor)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
SET(CMAKE_BUILD_TYPE "Debug")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(BIN_NAME "findarmor")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Headers)

FILE(GLOB_RECURSE sourcefiles "Sources/*cpp")
ADD_EXECUTABLE(${BIN_NAME} main.cpp ${sourcefiles})

TARGET_LINK_LIBRARIES(${BIN_NAME} ${OpenCV_LIBS} ${CMAKE_THREAD_LIB_INIT} /usr/lib/libgxiapi.so)
